[package]
name = "biu"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Dominic"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
regex = "1.10.2"

[dev-dependencies]
tempfile = "3.8.1"

[dependencies.xxhash-rust]
version = "0.8.7"
features = ["xxh3"]