[tool.poetry]
name = "backitup"
version = "0.1.0"
description = "A rsync-based backup tool."
authors = ["Dominic Rausch <you@example.com>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
autopep8 = "^2.0.2"
colorama = "^0.4.6"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
